--- a/SPH/index.html
+++ b/SPH/index.html
@@ -248,63 +248,19 @@
         }
         </script>
         <script id="sph-vs" type="x-shader/x-vertex">
-        precision mediump float;
-        precision mediump int;
-
-        uniform mat4 modelMatrix;
-        uniform mat4 viewMatrix;
-        uniform mat4 projectionMatrix;
-
-        attribute vec4 position;
-        attribute vec4 velocity;
-        attribute float the_index;
-
-        uniform sampler2D u_pos_tex;
-        uniform sampler2D u_vel_tex;
-        uniform sampler2D u_density_tex;
-
-        uniform float u_grid_tex_size;
-
-        varying vec4 v_color;
-        varying float v_index;
-
-        vec2 index2D(float indexPosition, bool obj){
-            vec2 index;
-            index.x = (mod(indexPosition, u_grid_tex_size)+0.5)/u_grid_tex_size;
-            index.y = (floor(indexPosition/u_grid_tex_size)+0.5)/u_grid_tex_size;
-            if(obj) index = 2.0 * index.xy - 1.0;
-            return index;
-        }
-
         void main() {
-            gl_PointSize = 2.0;
-            vec3 center = vec3(0.5);
-            vec3 box = vec3(0.48);
-
-            vec3 pos = texture2D(u_pos_tex, index2D(the_index, false)).rgb;
-            vec3 x_loc = pos - center;
-            vec3 ctp_loc = min(box, max(-box, x_loc));
-            vec3 contractpt = ctp_loc + center;
-            float dist = length(contractpt - pos);
-            float density = texture2D(u_density_tex, index2D(the_index, false)).r;
-
-            if(dist > 0.0) pos = contractpt;
-            if(density == 0.0) pos = vec3(0.0);
-            v_color = vec4(1.0, 0.0, 0.0, 1.0);
-            v_index = the_index;
-            gl_Position = modelMatrix * viewMatrix * projectionMatrix * (vec4(pos, 1.0));
+            gl_PointSize = 5.0;
+            gl_Position = projectionMatrix * modelMatrix * viewMatrix * vec4(position, 1.0);
         }
         </script>
         <script id="sph-fs" type="x-shader/x-fragment">
         precision mediump float;
-        precision mediump int;
-
-        varying vec4 v_color;
         void main(){
-            gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+            gl_FragColor = vec4(0.0, 0.0, 1.0, 1.0);
         }
         </script>
         <script src="../utils/three.js"></script>
+        <script src="../utils/OrbitControls.js"></script>
         <script src="../utils/dat.gui.min.js"></script>
     </head>
     <body>
@@ -312,4 +268,4 @@
         <script src="sph.js"></script>
         <script>main()</script>
     </body>
-<html>
+</html>
