--- a/SPH/index.html
+++ b/SPH/index.html
@@ -173,10 +173,9 @@
             return answ;
         }
 
-        vec3 sumPressure(float n_index, vec3 pos, vec3 vel, float pressure){
+        vec3 sumPressure(float n_index, vec3 pos, float pressure){
             vec2 n_i = index2D(n_index);
             vec3 n_pos = texture2D(u_pos_tex, n_i).rgb;
-            vec3 n_vel = texture2D(u_vel_tex, n_i).rgb;
             float n_density = texture2D(u_density_tex, n_i).r;
 
             if(n_density > 0.0){
@@ -210,18 +209,18 @@
                     vec3 n_gridpos = gridpos + u_neighbors[i];
                     float n_index = n_gridpos.x + u_grid_vol * n_gridpos.y + u_grid_vol* u_grid_vol * n_gridpos.z;
                     vec4 vert_ind = texture2D(u_neighbor_tex, index2D(n_index));
-                    pressureForce += sumPressure(vert_ind.r, pos, vel, pressure);
+                    pressureForce += sumPressure(vert_ind.r, pos, pressure);
                     viscosityForce += sumVisc(vert_ind.r, pos, vel, pressure);
-                    pressureForce += sumPressure(vert_ind.b, pos, vel, pressure);
+                    pressureForce += sumPressure(vert_ind.b, pos, pressure);
                     viscosityForce += sumVisc(vert_ind.b, pos, vel, pressure);
-                    pressureForce += sumPressure(vert_ind.g, pos, vel, pressure);
+                    pressureForce += sumPressure(vert_ind.g, pos, pressure);
                     viscosityForce += sumVisc(vert_ind.g, pos, vel, pressure);
                 }
                 internalForces = (0.5 * pressureForce + u_viscosity * viscosityForce);
                 internalForces /= density;
             }
-            vec3 x_loc = pos - vec3(0.5);
-            vec3 contractpt = min(vec3(0.48), max(vec3(-0.48), x_loc));
+            vec3 x_loc = pos - vec3(50.0);
+            vec3 contractpt = min(vec3(48.0), max(vec3(-48.0), x_loc));
             float dist = length((contractpt+0.5) - pos);
 
             if(dist > 0.0 && length(vel) > 0.0){
@@ -230,7 +229,7 @@
                 vel -= (1.0 + u_restitution) * dot(vel, norm) * norm;
             }
             vec3 acc = vec3(0.0, -9.8, 0.0) + internalForces;
-            vel += u_dt * acc;
+            vel += u_dt * acc.xyz;
             gl_FragColor = vec4(vel, 1.0);
         }
         </script>
@@ -279,8 +278,8 @@
 
         void main() {
             gl_PointSize = 10.0;
-            vec3 center = vec3(20.0);
-            vec3 box = vec3(19.0);
+            vec3 center = vec3(50.0);
+            vec3 box = vec3(48.0);
 
             vec3 pos = texture2D(u_pos_tex, index2D(the_index, false)).rgb;
             vec3 x_loc = pos - center;
