--- a/SPH/index.html
+++ b/SPH/index.html
@@ -114,7 +114,7 @@
 
             for(int i = 0; i < 27; i++){
                 vec3 n_gridpos = gridpos + u_neighbors[i];
-                float n_index = n_gridpos.x + u_grid_vol * n_gridpos.y + (u_grid_vol * u_grid_vol) * n_gridpos.z;
+                float n_index = n_gridpos.x +  n_gridpos.y + ( u_grid_vol) * n_gridpos.z;
                 if(n_index >= 0.0 && n_index < (u_grid_tex_size * u_grid_tex_size)){
                     vec4 v_indices = texture2D(u_neighbor_tex, index2D(n_index));
                     if(v_indices.r != 0.0) density += u_mass * wDefault(pos - texture2D(u_pos_tex, index2D(v_indices.r)).rgb);
@@ -207,7 +207,7 @@
             if(density > 0.0){
                 for(int i = 0; i < 27; i++){
                     vec3 n_gridpos = gridpos + u_neighbors[i];
-                    float n_index = n_gridpos.x + u_grid_vol * n_gridpos.y + u_grid_vol* u_grid_vol * n_gridpos.z;
+                    float n_index = n_gridpos.x + n_gridpos.y +  u_grid_vol * n_gridpos.z;
                     vec4 vert_ind = texture2D(u_neighbor_tex, index2D(n_index));
                     pressureForce += sumPressure(vert_ind.r, pos, pressure);
                     viscosityForce += sumVisc(vert_ind.r, pos, vel, pressure);
@@ -277,9 +277,9 @@
        }
 
         void main() {
-            gl_PointSize = 10.0;
-            vec3 center = vec3(50.0);
-            vec3 box = vec3(48.0);
+            gl_PointSize = 3.0;
+            vec3 center = vec3(100.0);
+            vec3 box = vec3(96.0);
 
             vec3 pos = texture2D(u_pos_tex, index2D(the_index, false)).rgb;
             vec3 x_loc = pos - center;
@@ -290,7 +290,7 @@
 
             if(dist > 0.0) pos = contractpt;
             if(density == 0.0) pos = vec3(0.0);
-            v_color = vec4(0.0, 0.0, 1.0, 1.0);
+            v_color = vec4(0.0, 0.0, 1.0 * pos.y * 0.035 + 0.2, 1.0);
             v_index = the_index;
             gl_Position = projectionMatrix * modelMatrix * viewMatrix * vec4(pos, 1.0);
         }
