integrate fireworks -- bugs outstanding

--- a/index.html
+++ b/index.html
@@ -392,18 +392,20 @@
         gl_FragColor = v_color;
     }
     </script>
-    <script src="/utils/stats.min.js"></script>
-    <script src="/utils/three.min.js"></script>
-    <script src="/utils/ShaderGodRays.js"></script>
-    <script src="/utils/projector.js"></script>
-    <script src="/utils/OBJLoader.js"></script>
-    <script src="/utils/dat.gui.min.js"></script>
-    <script src="/utils/OrbitControls.js"></script>
+    <script src="./utils/stats.min.js"></script>
+    <script src="./utils/three.min.js"></script>
+    <script src="./utils/ShaderGodRays.js"></script>
+    <script src="./utils/projector.js"></script>
+    <script src="./utils/GPUParticleSystem.js"></script>
+    <script src="./utils/OBJLoader.js"></script>
+    <script src="./utils/dat.gui.min.js"></script>
+    <script src="./utils/OrbitControls.js"></script>
 
     <body>
         <div id="container"></div>
-        <script src="/SPH/sph.js"></script>
-        <script src="/GodRays/GodRays.js"></script>
+        <script src="./SPH/sph.js"></script>
+        <script src="./GodRays/GodRays.js"></script>
+        <script src="./Fireworks/Firework.js"></script>
         <script src="Driver.js"></script>
         <script>main()</script>
     <body>
